Fix accent gap

--- a/css/custom.css
+++ b/css/custom.css
@@ -137,7 +137,7 @@ blockquote {
     color: #333333;
 }
 
-.header a.logo span.accent {
+.header a.logo b.accent {
     color: #ebebeb;
 }
 
